--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -16,8 +16,9 @@ editor.description=styledText
 editor.url=url
 
 
-button.jar.search = Search for {0}
- button.jarAndMaven.search = Search for {0} and Maven
+#0 is jarName
+button.jar.search = Search Internet for Jar Name
+ button.jarAndMaven.search = Search Internet for Jar Name / Maven
  
 
 jar.importing.title = Importing {0}/{1}/{2}
