--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/unrecognised.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/unrecognised.properties
@@ -4,23 +4,23 @@ card.title.indent=30
 card.title.icon=artifact.jarUnrecognised
 unrecognised.image=artifact.jarUnrecognised
 
-jar.notRecognised.searching.text = Searching SoftwareFM Database for other Jars that look like this. You can search the internet for the jar name with either of the two buttons below
-jar.notRecognised.found0.text= SoftwareFM has not seen a jar that looked like this before. You can search the internet for the jar name with either of the two buttons below
-jar.notRecognised.found1.text="SoftwareFM has seen one artifact that looked like this before. Select in the table below to populate. If you wish you can search the internet for the jar name with either of the two buttons below"
-jar.notRecognised.foundMany.text=SoftwareFM has seen some artifacts that look a bit like this. Please check which is the correct one!
+jar.notRecognised.searching.text = Searching SoftwareFM Database for other Jars that look like this. \n\nYou can search the internet for the jar name with either of the two buttons below
+jar.notRecognised.found0.text= SoftwareFM has not seen a jar that looked like this before. \n\nYou can search the internet for the jar name with either of the two buttons below
+jar.notRecognised.found1.text=SoftwareFM has seen one artifact that looked like this before. \n\nSelect in the table below to populate. If you wish you can search the internet for the jar name with either of the two buttons below
+jar.notRecognised.foundMany.text=SoftwareFM has seen some artifacts that look a bit like this. \n\nPlease check that you select the correct one!
 
 unrecognised.jarName.text = jarName
 unrecognised.eclipseProject.text = eclipseProject
 unrecognised.jarPath.text=jarPath
 
 jar.rt.notRecognised.title= Java Runtime needs adding
-jar.rt.notRecognised.text = This is a version of the Java runtime that SoftwareFm hasn''t seen before. Click this panel to add it to SoftwareFm\n\n\
+jar.rt.notRecognised.text = This is a version of the Java runtime that SoftwareFm hasn''t seen before. <Click this panel to add it to SoftwareFm>\n\n\
 <Eclipse Project that added the jar:>\n\
   {2}\n\n\
 <Jar name:>\n\
   {1}\n\n\
 <Full jar path:>\n\
-  {0}\n\
+  {0}\n\n\
  <Guessed Version number:>\n\
   {3}\n
  
