--- a/org.softwareFm.server/.classpath
+++ b/org.softwareFm.server/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="src/java/main"/>
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/main/resource"/>
+	<classpathentry kind="src" path="src/test/resource"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
