More icons/webpage changes

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -113,6 +113,7 @@ webpage.artifact.url=http://www.softwarefm.com/eclipse/artifact.html
 webpage.jar.url=http://www.softwarefm.com/eclipse/jar.html
 webpage.version.url=http://www.softwarefm.com/eclipse/version.html
 webpage.snippet.url=http://www.softwarefm.com/eclipse/snippet.html
+webpage.debug.url=http://www.softwarefm.com/eclipse/debug.html
 
 
 
