Tests passing: Added cleaning up resources to some tests, as was running out

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -69,10 +69,12 @@ button.comment.add.title=
 button.comment.add.image=general.commentAdd
 
 action.welcome.title = Welcome
+action.refresh.title = Refresh
 action.group.title = Group
 action.artifact.title = Artifact
 action.jar.title = Jar
 action.debug.title = Debug
+action.nuke.title = Nuke
 action.version.title = Version
 action.snippet.title = Snippet
 
