--- a/org.softwareFm.server/build.properties
+++ b/org.softwareFm.server/build.properties
@@ -1,6 +1,7 @@
 source.. = src/java/main/,\
            src/test/java/,\
-           src/main/resource/
+           src/main/resource/,\
+           src/test/resource/
 output.. = bin/
 bin.includes = META-INF/,\
                .
