--- a/Externals/build.properties
+++ b/Externals/build.properties
@@ -22,4 +22,5 @@ bin.includes = META-INF/,\
                lib/commons-dbcp-1.3.jar,\
                lib/commons-pool-1.5.4.jar,\
                lib/spring-beans-3.0.5.RELEASE.jar,\
-               lib/java2html.jar
+               lib/java2html.jar,\
+               lib/bcprov-jdk16-146.jar
