--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -16,6 +16,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/spring-beans-3.0.5.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-tx-3.0.5.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/java2html.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-email-1.2.jar" sourcepath="lib/commons-email-1.2-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/cake-forkjoin-0.1.jar"/>
@@ -30,5 +31,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/spring-asm-3.0.5.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-core-3.0.5.RELEASE.jar" sourcepath="C:/Users/Phil/.m2/repository/org/springframework/spring-core/3.0.5.RELEASE/spring-core-3.0.5.RELEASE-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/twitter4j-core-2.2.4.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaMail"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
