--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/login.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/login.properties
@@ -12,3 +12,7 @@ signup.button.text = Signup as new user
 forgotPassword.button.text = Forgot Password
 
 login.contactingServer.text = <Trying to contact the server>\n\n If you are seeing this message it is possible that you are not able to connect to the SoftwareFM server.
+login.loggedIn.title = Logged In
+login.loggedIn.text = Welcome to softwareFm.\nYou are logged in as {0}
+
+login.failedtologin.text = Failed to login\n\nEmail: {0}\n\nMessage: {1} 
