--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/forgotpassword.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/forgotpassword.properties
@@ -4,7 +4,13 @@ card.title.icon=artifact.snippet
 forgotpassword.image = artifact.snippet
 
 
-
 forgotPassword.title.text = Forgot Password
 login.button.text = Login
- signup.button.text = Sign up
+signup.button.text = Sign up
+ 
+forgotpassword.failedToSend.title = Failed to send Forgotten Password
+forgotpassword.failedToSend.text = Cannot send forgotten password to {0}\n\nReason: {1}
+
+forgotpassword.emailSent.title = Forgotten Password sent
+forgotpassword.emailSent.text = Reminder email sent to {0}
+
