--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/signup.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/signup.properties
@@ -6,3 +6,9 @@ signup.image = artifact.snippet
 signup.title.text = Signup
 login.button.text = Login
 forgotPassword.button.text = Forgot Password
+
+signup.signedup.title = Successfully signed up
+signup.signedup.text = Welcome to SoftwareFM {0}
+
+signup.failedtosignup.title = Failed to sign up
+signup.failedtosignup.text = Failed to sign up\n\nEmail{0}\n\nMessage: {1}
