Cleaning up messages

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/forgotpassword.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/forgotpassword.properties
@@ -9,8 +9,8 @@ login.button.text = Login
 signup.button.text = Sign up
  
 forgotpassword.failedToSend.title = Failed to send Forgotten Password
-forgotpassword.failedToSend.text = Cannot send forgotten password to {0}\n\nReason: {1}
+forgotpassword.failedToSend.text = Cannot send forgotten password to {0}\n\n{1}\n\nClicking this panel will start login again
 
 forgotpassword.emailSent.title = Forgotten Password sent
-forgotpassword.emailSent.text = Reminder email sent to {0}
+forgotpassword.emailSent.text = Reminder email sent to {0}\n\nClicking this panel will start login again
 
