--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/signup.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/signup.properties
@@ -8,7 +8,7 @@ login.button.text = Login
 forgotPassword.button.text = Forgot Password
 
 signup.signedup.title = Successfully signed up
-signup.signedup.text = Welcome to SoftwareFM {0}
+signup.signedup.text = Welcome to softwareFm.\n\n\nYou are logged in as {0}
 
 signup.failedtosignup.title = Failed to sign up
-signup.failedtosignup.text = Failed to sign up\n\nEmail{0}\n\nMessage: {1}
+signup.failedtosignup.text = Email: {0}\n\n{1}\n\nClicking this panel will start login again
