--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/login.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/login.properties
@@ -11,8 +11,14 @@ login.title.text = Login
 signup.button.text = Signup as new user
 forgotPassword.button.text = Forgot Password
 
+login.contactingServer.title=Contacting Server
 login.contactingServer.text = <Trying to contact the server>\n\n If you are seeing this message it is possible that you are not able to connect to the SoftwareFM server.
-login.loggedIn.title = Logged In
-login.loggedIn.text = Welcome to softwareFm.\nYou are logged in as {0}
+login.failedtocontactserver.title = Failed to contact server
+login.failedtocontactserver.text = Failed to contact the Software FM Server. Please try again later\n\nMessage was {1}
 
-login.failedtologin.text = Failed to login\n\nEmail: {0}\n\nMessage: {1} 
+
+login.loggedIn.title = Logged In
+login.loggedIn.text = Welcome to softwareFm.\n\n\nYou are logged in as {0}
+
+login.failedtologin.title = Failed to login 
+login.failedtologin.text = Email: {0}\n\n {1}\n\nClicking this panel will start login again
