--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/forgotpassword.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/forgotpassword.properties
@@ -1,7 +1,7 @@
 card.color=242,235,222
 card.title.color=245,205,180
-card.title.icon=artifact.snippet
-forgotpassword.image = artifact.snippet
+card.title.icon=login.login
+forgotpassword.image = login.login
 
 
 forgotPassword.title.text = Forgot Password
