--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/login.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/login.properties
@@ -1,7 +1,7 @@
 card.color=242,235,222
 card.title.color=245,205,180
-card.title.icon=artifact.snippet
-login.image = artifact.snippet
+card.title.icon=login.login
+login.image = login.login
 
 
 login.button.signUp = Sign up
