Added server change password

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/login.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/login.properties
@@ -21,4 +21,4 @@ login.loggedIn.title = Logged In
 login.loggedIn.text = Welcome to softwareFm.\n\n\nYou are logged in as {0}
 
 login.failedtologin.title = Failed to login 
-login.failedtologin.text = Email: {0}\n\n {1}\n\nClicking this panel will start login again
+login.failedtologin.text = {0}\n\nClicking this panel will start login again
