Fixed problem when couldn't connect to server

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/login.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/login.properties
@@ -12,7 +12,7 @@ signup.button.text = Signup as new user
 forgotPassword.button.text = Forgot Password
 
 login.contactingServer.title=Contacting Server
-login.contactingServer.text = <Trying to contact the server>\n\n If you are seeing this message it is possible that you are not able to connect to the SoftwareFM server.
+login.contactingServer.text = <Trying to contact the server>\n\n If you are seeing this message it is possible that you are not able to connect to the SoftwareFM server.\n\nClicking this panel will try again
 login.failedtocontactserver.title = Failed to contact server
 login.failedtocontactserver.text = Failed to contact the Software FM Server. Please try again later\n\nMessage was {1}
 
