--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -18,6 +18,8 @@
 	<classpathentry exported="true" kind="lib" path="lib/java2html.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-email-1.2.jar" sourcepath="lib/commons-email-1.2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/javax.mail.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/easymock-3.1.jar" sourcepath="lib/easymock-3.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/objenesis-1.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/cake-forkjoin-0.1.jar"/>
