Trying to fix project errors

--- a/org.softwareFm.explorer.eclipse/.project
+++ b/org.softwareFm.explorer.eclipse/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.softwareFm.explorer.eclipse</name>
+	<name>org.softwareFm.explorer.eclipse_trouble</name>
 	<comment></comment>
 	<projects>
 	</projects>
