--- a/org.softwarefm.crowdsourced.eclipse/.project
+++ b/org.softwarefm.crowdsourced.eclipse/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.softwarefm.crowdsourced.softwarefm</name>
+	<name>org.softwarefm.crowdsourced.eclipse_1</name>
 	<comment></comment>
 	<projects>
 	</projects>
