--- a/org.softwareFm.common/.project
+++ b/org.softwareFm.common/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.softwareFm.common</name>
+	<name>org.softwarefm.common</name>
 	<comment></comment>
 	<projects>
 	</projects>
