--- a/org.softwarefm.client/.project
+++ b/org.softwarefm.client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.softwareFm.client</name>
+	<name>org.softwarefm.client</name>
 	<comment></comment>
 	<projects>
 	</projects>
