--- a/org.softwareFm.allTests/build.properties
+++ b/org.softwareFm.allTests/build.properties
@@ -1,4 +1,5 @@
-source.. = src/test/java/
-output.. = bin/
+source.. = src/test/java/,\
+           src/main/utilities/
+soutput.. = bin/
 bin.includes = META-INF/,\
                .
