--- a/org.softwarefm.swt/src/main/resources/org/softwareFm/swt/configuration/Card.properties
+++ b/org.softwarefm.swt/src/main/resources/org/softwareFm/swt/configuration/Card.properties
@@ -77,6 +77,7 @@ action.debug.title = Debug
 action.nuke.title = Nuke
 action.version.title = Version
 action.snippet.title = Snippet
+action.people.title = People
 
 #base images //TODO Move these images to the relevant properties
 email.image = artifact.email
