--- a/org.softwarefm.swt/bin/org/softwareFm/swt/configuration/comment.properties
+++ b/org.softwarefm.swt/bin/org/softwareFm/swt/configuration/comment.properties
@@ -11,3 +11,7 @@ editor.text=styledText
 card.name.url={1}
 card.name.field=title
 
+comments.editor.title = Edit comment
+comments.button.you.text = You
+comments.button.everyone.text = Everyone
+comments.button.group.text = Group
