starting the integration of commentreader with the comments composite

--- a/org.softwareFm.swt/bin/org/softwareFm/swt/configuration/comment.properties
+++ b/org.softwareFm.swt/bin/org/softwareFm/swt/configuration/comment.properties
@@ -15,3 +15,7 @@ comments.editor.title = Edit comment
 comments.button.you.text = You
 comments.button.everyone.text = Everyone
 comments.button.group.text = Group
+
+table.creator.column.title = Creator
+table.source.column.title = Visibility
+table.text.column.title = Comment
