Adding the 'click on comment' behaviour

--- a/org.softwareFm.swt/bin/org/softwareFm/swt/configuration/Card.properties
+++ b/org.softwareFm.swt/bin/org/softwareFm/swt/configuration/Card.properties
@@ -119,6 +119,6 @@ webpage.snippet.url=http://www.softwarefm.com/eclipse/snippet.html
 webpage.debug.url=http://www.softwarefm.com/eclipse/debug.html
 
 
-
-
+#0 creator #1 time #2 cardtype #4 url 
+comment.details.title = Created by {0}, {1}
 
