--- a/org.softwarefm.swt/bin/org/softwareFm/swt/configuration/login.properties
+++ b/org.softwarefm.swt/bin/org/softwareFm/swt/configuration/login.properties
@@ -20,5 +20,10 @@ login.failedtocontactserver.text = Failed to contact the Software FM Server. Ple
 login.loggedIn.title = Logged In
 login.loggedIn.text = Welcome to softwareFm.\n\n\nYou are logged in as {0}
 
+mysoftwarefm.loggedin.title = My Software Fm
+myprojects.title= My Projects
+
+peopleIknow.loading.title = Searching...
+peopleIknow.loaded.title = Group Id: {0}  Artifact Id: {1}
 login.failedtologin.title = Failed to login 
 login.failedtologin.text = {1}\n\nClicking this panel will start login again
