--- a/org.softwarefm.swt/src/main/resources/org/softwareFm/swt/configuration/myGroups.properties
+++ b/org.softwarefm.swt/src/main/resources/org/softwareFm/swt/configuration/myGroups.properties
@@ -6,5 +6,8 @@ card.title.navIcon=title.advert
 
 advert.image=artifact.advert
 
+mygroups.title = My Groups
+
+group.members.needToSelectGroup
 group.members.title = Group Membership
 group.members.needToSelectGroup = Select a group to see members
