--- a/org.softwareFm.swt/bin/org/softwareFm/swt/configuration/signup.properties
+++ b/org.softwareFm.swt/bin/org/softwareFm/swt/configuration/signup.properties
@@ -11,4 +11,5 @@ signup.signedup.title = Successfully signed up
 signup.signedup.text = Welcome to softwareFm.\n\n\nYou are logged in as {0}
 
 signup.failedtosignup.title = Failed to sign up
-signup.failedtosignup.text = Email: {0}\n\n{1}\n\nClicking this panel will start login again
+signup.failedtosignup.text = Email: {0}\n\n{1}\n\nThis may be because someone has invited you to a group, in which case an email would have been sent to you with details of how to login.\n\n\
+Clicking this panel will start login again, and then pressing 'Forgot Password' would allow you to get your password
