--- a/org.softwarefm.swt/src/main/resources/org/softwareFm/swt/configuration/forgotpassword.properties
+++ b/org.softwarefm.swt/src/main/resources/org/softwareFm/swt/configuration/forgotpassword.properties
@@ -5,6 +5,8 @@ forgotpassword.image = login.login
 
 
 forgotPassword.title.text = Forgot Password
+forgotPassword.message.text = When your email address is correctly entered, please click the 'OK' button below. SoftwareFM will the email you a link to your password.
+
 login.button.text = Login
 signup.button.text = Sign up
  
