--- a/org.softwarefm.swt/src/main/resources/org/softwareFm/swt/configuration/myGroups.properties
+++ b/org.softwarefm.swt/src/main/resources/org/softwareFm/swt/configuration/myGroups.properties
@@ -11,3 +11,8 @@ mygroups.title = My Groups
 group.members.needToSelectGroup
 group.members.title = Group Membership
 group.members.needToSelectGroup = Select a group to see members
+
+takeOn.email.default = $email$ has invited you to join the SoftwareFM - $group$\n\n\
+As you are not yet a member of SoftwareFM, you will need to download and install the SoftwareFM Eclipse plug in. You can find out how to do this by reading the Quick Guide at http://www.softwarefm.org/pages/downloads.php\n\n\
+Once you have downloaded and installed the SoftwareFM Eclipse plug in, simply login as a new user using the same email address as the one used to send you this email.\n\n\
+Once logged in you will be automatically an invited member to that group.
