The invite button now actually invites. Still untested

--- a/org.softwareFm.swt/bin/org/softwareFm/swt/configuration/forgotpassword.properties
+++ b/org.softwareFm.swt/bin/org/softwareFm/swt/configuration/forgotpassword.properties
@@ -5,7 +5,7 @@ forgotpassword.image = login.login
 
 
 forgotPassword.title.text = Forgot Password
-forgotPassword.message.text = When your email address is correctly entered, please click the 'OK' button below. SoftwareFM will the email you a link to your password.
+forgotPassword.message.text = When your email address is correctly entered, please click the 'OK' button below. SoftwareFM will then email you a link to your password.
 
 login.button.text = Login
 signup.button.text = Sign up
