Modified form to enable/disable buttons, and started work on import via maven

--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -30,3 +30,15 @@ cancel.button.text = Cancel
 key.groupId.text= Group Id
 key.artifactId.text= Artifact Id
 key.version.text= Version
+
+
+#0 filename #1 fullpath
+link.maven.instructions.noSelection.text=In order to tell SoftwareFM about a project that has a POM, please just enter the url where the pom may be found and press the 'Use POM' button.\n\n\
+SoftwareFM will download the jar, and add the information about the jar to it's repository
+
+link.maven.instructions.selection.text=File: {0}\nPath: {1}\nIn order to tell SoftwareFM about the project that created {0}, please enter the url for the pom that created it. \n\n\
+SoftwareFM will download the jar, check the digest matches your jar, and add the information about the jar to it's repository\n\n\
+You can use this to add any POM (as the project will be added even if it doesn't match the digest of the current item
+
+link.maven.pom.url.text = POM Url
+link.maven.button.text = Use POM
