--- a/org.softwarefm.eclipse/pom.xml
+++ b/org.softwarefm.eclipse/pom.xml
@@ -31,6 +31,11 @@
          <version>2.4</version>
       </dependency>
       <dependency>
+         <groupId>org.apache.maven</groupId>
+         <artifactId>maven-model</artifactId>
+         <version>2.2.1</version>
+      </dependency>
+      <dependency>
          <groupId>org.jdom</groupId>
          <artifactId>jdom</artifactId>
          <version>1.1.3</version>
