Adding red text / tooltip when there is a problem

--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -24,6 +24,8 @@ To add it:\n\
 * Add the GroupId, ArtifactId and Version on consecutive lines, without leading or trailing spaces, or any other text\n\
 * Click the save button (use the scroll bar to find it) or Alt-S
 
+message.illegal.pom.url =Url [{0}] is not a legal url
+
 ok.button.text = Ok
 cancel.button.text = Cancel
 
