--- a/org.softwarefm.eclipse/pom.xml
+++ b/org.softwarefm.eclipse/pom.xml
@@ -11,6 +11,11 @@
    </repositories>
    <dependencies>
       <dependency>
+         <groupId>org.apache.xmlbeans</groupId>
+         <artifactId>xmlbeans</artifactId>
+         <version>2.5.0</version>
+      </dependency>
+      <dependency>
          <groupId>org.softwarefm</groupId>
          <artifactId>utilities</artifactId>
          <version>0.0.1-SNAPSHOT</version>
