IMavenImport added which from a pom url allows the jar to be downloaded and digested

--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -44,3 +44,6 @@ You can use this to add any POM (as the project will be added even if it doesn't
 
 link.maven.pom.url.text = POM Url
 link.maven.button.text = Use POM
+
+#0 url
+job.maven.import =Maven import of [{0}]
