--- a/org.softwarefm.eclipse/pom.xml
+++ b/org.softwarefm.eclipse/pom.xml
@@ -11,11 +11,6 @@
    </repositories>
    <dependencies>
       <dependency>
-         <groupId>org.apache.xmlbeans</groupId>
-         <artifactId>xmlbeans</artifactId>
-         <version>2.5.0</version>
-      </dependency>
-      <dependency>
          <groupId>org.softwarefm</groupId>
          <artifactId>utilities</artifactId>
          <version>0.0.1-SNAPSHOT</version>
@@ -36,14 +31,14 @@
          <version>2.4</version>
       </dependency>
       <dependency>
-         <groupId>org.apache.maven</groupId>
-         <artifactId>maven-model</artifactId>
-         <version>2.2.1</version>
-      </dependency>
-      <dependency>
          <groupId>org.jdom</groupId>
          <artifactId>jdom</artifactId>
          <version>1.1.3</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.maven</groupId>
+         <artifactId>maven-plugin-api</artifactId>
+         <version>3.0</version>
       </dependency>
    </dependencies>
 </project>
