--- a/org.softwarefm.eclipse/pom.xml
+++ b/org.softwarefm.eclipse/pom.xml
@@ -8,6 +8,13 @@
          <id>swt-repo</id>
          <url>https://swt-repo.googlecode.com/svn/repo/</url>
       </repository>
+      <repository>
+         <id>info-bliki-repository</id>
+         <url>http://gwtwiki.googlecode.com/svn/maven-repository/</url>
+         <releases>
+            <enabled>true</enabled>
+         </releases>
+      </repository>
    </repositories>
    <dependencies>
       <dependency>
@@ -29,11 +36,6 @@
          <groupId>org.easymock</groupId>
          <artifactId>easymock</artifactId>
          <version>2.4</version>
-      </dependency>
-      <dependency>
-         <groupId>org.jdom</groupId>
-         <artifactId>jdom</artifactId>
-         <version>1.1.3</version>
       </dependency>
       <dependency>
          <groupId>org.apache.maven</groupId>
