--- a/org.softwarefm.softwarefm/.classpath
+++ b/org.softwarefm.softwarefm/.classpath
@@ -1,10 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jdom-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/utilities-0.0.1-SNAPSHOT.jar" sourcepath="/org.softwarefm.utilities"/>
-	<classpathentry exported="true" kind="lib" path="lib/eclipse-0.0.1-SNAPSHOT.jar" sourcepath="/org.softwarefm.eclipse"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.softwarefm.eclipse"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.softwarefm.utilities"/>
+	<classpathentry kind="lib" path="lib/commands-3.3.0-I20070605-0010.jar"/>
+	<classpathentry kind="lib" path="lib/common-3.3.0-v20070426.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/easymock-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.1.jar"/>
+	<classpathentry kind="lib" path="lib/jdom-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jface-3.3.0-I20070606-0010.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="lib/maven-artifact-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/maven-model-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/maven-plugin-api-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.swt.win32.win32.x86_64-3.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/plexus-classworlds-2.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/plexus-component-annotations-1.5.4.jar"/>
+	<classpathentry kind="lib" path="lib/plexus-utils-2.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/sisu-guice-2.1.7-noaop.jar"/>
+	<classpathentry kind="lib" path="lib/sisu-inject-bean-1.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/sisu-inject-plexus-1.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/swt-3.3.0-v3346.jar"/>
+	<classpathentry kind="lib" path="lib/eclipse-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/utilities-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/main/java"/>
