--- a/org.softwarefm.utilities/pom.xml
+++ b/org.softwarefm.utilities/pom.xml
@@ -14,6 +14,10 @@
          <artifactId>httpclient</artifactId>
          <version>4.1.1</version>
       </dependency>
-
+      <dependency>
+         <groupId>org.jdom</groupId>
+         <artifactId>jdom</artifactId>
+         <version>1.1.3</version>
+      </dependency>
    </dependencies>
 </project>
