Manual import now starting to work

--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -26,6 +26,17 @@ To add it:\n\
 
 message.illegal.pom.url =Url [{0}] is not a legal url
 
+#0 is name 
+message.needsValue.text = Need value for {0}
+
+message.file.notKnown= Unsure about which file is being added. Select something in workspace
+
+#0 for file 
+message.digest.unknown= Do not have value of digest for file {0}
+
+#0 for identifier
+message.illegal.identifier=Value of {0} has illegal characters. Letters, numbers, dot and minus are allowed
+
 ok.button.text = Ok
 cancel.button.text = Cancel
 
