Improved Eclipse jobs / ensured text selected when gains focus in Form

--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -37,6 +37,8 @@ message.digest.unknown= Do not have value of digest for file {0}
 #0 for identifier
 message.illegal.identifier=Value of {0} has illegal characters. Letters, numbers, dot and minus are allowed
 
+message.notchanged.projectdata = Project Data has not changed
+
 ok.button.text = Ok
 cancel.button.text = Cancel
 
@@ -58,3 +60,6 @@ link.maven.button.text = Use POM
 
 #0 url
 job.maven.import =Maven import of [{0}]
+
+#0 group id, #1 artifact id, #2 version
+job.manual.import =Manual import of {0}:{1}-{2}
