--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -13,16 +13,13 @@ message.foundProjectData.text = Found Group Id [{4}] Artifact Id [{5}] Version [
 #0 file   
 message.notAJar.text =The selected item was defined in file {0} which isn''t a jar
 
-#0 file #1 digest, #2 digest 6 characters
-message.unrecognisedDigest.text = File {0} has not been added to SoftwareFm\n\
+#0 file #1 digest #2 digest 6 characters
+message.unrecognisedDigest.text =Digest {2} has not been added to SoftwareFm\n\
 To add it:\n\
 * Work out the GroupId, ArtifactId and Version for this jar\n\
 ** If the jar has a Maven POM, these are the same meanings used in the POM\n\
 ** If the jar is rt.jar (or on a Mac classes.jar), these are: sun.jdk, runtime, <your version>\n\
-** If the jar doesn't have a POM, use the url of the project website as the GroupId, and the stem of the jar as the ArtifactId\n\
-* Click the words "edit this page" below\n\
-* Add the GroupId, ArtifactId and Version on consecutive lines, without leading or trailing spaces, or any other text\n\
-* Click the save button (use the scroll bar to find it) or Alt-S
+** If the jar doesn't have a POM, use the url of the project website as the GroupId, and the stem of the jar as the ArtifactId
 
 message.illegal.pom.url =Url [{0}] is not a legal url
 
