Project Composite no longer has text at top

--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -14,12 +14,24 @@ message.foundProjectData.text = Found Group Id [{4}] Artifact Id [{5}] Version [
 message.notAJar.text =The selected item was defined in file {0} which isn''t a jar
 
 #0 file #1 digest #2 digest 6 characters
-message.unrecognisedDigest.text =Digest {2} has not been added to SoftwareFm\n\
-To add it:\n\
-* Work out the GroupId, ArtifactId and Version for this jar\n\
+message.unrecognisedDigest.project.text =File: {0}\n\
+with digest {2} has not been added to SoftwareFm\n\
+Please try and add information about it
+
+message.unrecognisedDigest.mavenImport.text =If you know the POM that created the jar, enter it's URL below, and press Use POM.\n\n\
+If you cannot find the POM, or the project doesn't have one, then you can use the manual import by selecting the tab above
+
+message.unrecognisedDigest.manualImport.text =\
+It is preferred to use a maven import if possible, but if you cannot find the POM, or the project doesn't have one, then:\n\
+*Work out the GroupId, ArtifactId and Version for this jar\n\
 ** If the jar has a Maven POM, these are the same meanings used in the POM\n\
 ** If the jar is rt.jar (or on a Mac classes.jar), these are: sun.jdk, runtime, <your version>\n\
 ** If the jar doesn't have a POM, use the url of the project website as the GroupId, and the stem of the jar as the ArtifactId
+
+#0 filename #1 fullpath
+link.maven.instructions.noSelection.text=Please enter the url of the POM file, and press Use POM
+
+
 
 message.illegal.pom.url =Url [{0}] is not a legal url
 
@@ -44,9 +56,6 @@ key.artifactId.text= Artifact Id
 key.version.text= Version
 
 
-#0 filename #1 fullpath
-link.maven.instructions.noSelection.text=In order to tell SoftwareFM about a project that has a POM, please just enter the url where the pom may be found and press the 'Use POM' button.\n\n\
-SoftwareFM will download the jar, and add the information about the jar to it's repository
 
 link.maven.instructions.selection.text=File: {0}\nPath: {1}\nIn order to tell SoftwareFM about the project that created {0}, please enter the url for the pom that created it. \n\n\
 SoftwareFM will download the jar, check the digest matches your jar, and add the information about the jar to it's repository\n\n\
