WOrking on the text appearing in the views, especially LinkToProject

--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -1,71 +1,103 @@
-message.fortest.text = {0}and{1}
+#Structure:
+#Form: <type>.<area>.<id>
+#type is:
+#   Message: this will appear in a text area, usually communicating something to the user
+#   button: this will appear as the text on a button
+#   label: this will appear as the text on a label
+#   key: this is the text for a form
+#   job: this will be the title of an eclipse job
+#area and id are self documenting
 
-message.searching.text = Searching...
 
-message.notJavaElement.text = SoftwareFM was unable to work out what sort of JavaElement the selected item was
+###################### Shared ########################
+message.shared.searching = Searching...
+message.shared.notJavaElement = SoftwareFM was unable to work out what sort of JavaElement the selected item was
+#0 file   
+message.shared.notAJar =The selected item was defined in file {0} which isn''t a jar
+
+#0 is name 
+error.shared.needsValue = Need value for {0}
+
+button.shared.ok = Ok
+button.shared.cancel = Cancel
+
+
+###################### Project ########################
+
 #0 file #1 digest, #2 digest 6 characters  
-message.foundDigest.text = The selected item was defined in file {0}
+#appears in the project composite while the digest is being calculated. This should be a very short time!
+message.project.digestDetermined = The selected item was defined in file {0}
+
+###################### LinkToProject ########################
 
 #0 file #1 digest, #2 digest 6 characters
 #3 projectData
 #4 groupId #5 artifactId #6 version  
-message.foundProjectData.text = Found Group Id [{4}] Artifact Id [{5}] Version [{6}]
-#0 file   
-message.notAJar.text =The selected item was defined in file {0} which isn''t a jar
+message.link.projectDetermined = File: {0}\nDigest {1}\nIf you think that the jar has been linked to the wrong project, you can edit it below
 
 #0 file #1 digest #2 digest 6 characters
-message.unrecognisedDigest.project.text =File: {0}\n\
-with digest {2} has not been added to SoftwareFm\n\
-Please try and add information about it
+message.link.unknownDigest = File: {0}\n\
+Digest: {1}\n\
+This has not been added to SoftwareFm\n\
+In order to link this jar to SoftwareFM, we would like you to tell use some information about it. \n\
+Ideally you will give us the url of the Maven POM that created the jar, but can you can manually enter the relevant data if you want.
 
-message.unrecognisedDigest.mavenImport.text =If you know the POM that created the jar, enter it's URL below, and press Use POM.\n\n\
-If you cannot find the POM, or the project doesn't have one, then you can use the manual import by selecting the tab above
+###################### MavenImport ########################
 
-message.unrecognisedDigest.manualImport.text =\
-It is preferred to use a maven import if possible, but if you cannot find the POM, or the project doesn't have one, then:\n\
-*Work out the GroupId, ArtifactId and Version for this jar\n\
-** If the jar has a Maven POM, these are the same meanings used in the POM\n\
-** If the jar is rt.jar (or on a Mac classes.jar), these are: sun.jdk, runtime, <your version>\n\
-** If the jar doesn't have a POM, use the url of the project website as the GroupId, and the stem of the jar as the ArtifactId
+#0 file #1 digest #2 digest 6 characters
+message.mavenImport.title =If you have the url of a POM you can enter it here and press 'Use POM'. This will tell Software FM about the jars that the POM creates
 
-#0 filename #1 fullpath
-link.maven.instructions.noSelection.text=Please enter the url of the POM file, and press Use POM
+key.mavenImport.pomUrl = POM Url
 
+button.mavenImport.usePom = Use POM
 
+#0 Url
+error.mavenImport.illegalUrl =Url [{0}] is not a legal url
 
-message.illegal.pom.url =Url [{0}] is not a legal url
+###################### ManualImport ########################
+message.manualImport.notAJar =Manual import cannot be used
+message.manualImport.notJavaElement =Manual import cannot be used
+#0 file #1 digest #2 digest 6 characters
+message.manualImport.unknownDigest =\
+To work out the GroupId, ArtifactId and Version for this jar:\n\
+* If the jar has a Maven POM, these are the same meanings used in the POM\n\
+* If the jar is rt.jar (or on a Mac classes.jar), these are: sun.jdk, runtime, <your version>\n\
+* If the jar doesn''t have a POM, use the url of the project website as the GroupId, and the stem of the jar as the ArtifactId
 
-#0 is name 
-message.needsValue.text = Need value for {0}
+#0 file #1 digest, #2 digest 6 characters
+#3 projectData
+#4 groupId #5 artifactId #6 version  
+message.manualImport.projectDetermined=\
+These values should be the same as those used by Maven (if the project is maven-enabled)
 
-message.file.notKnown= Unsure about which file is being added. Select something in workspace
-
+error.manualImport.fileUnknown= Unsure about which file is being added. Select something in workspace
 #0 for file 
-message.digest.unknown= Do not have value of digest for file {0}
+error.manualImport.digestUnknown= Do not have value of digest for file {0}
 
 #0 for identifier
-message.illegal.identifier=Value of {0} has illegal characters. Letters, numbers, dot and minus are allowed
+error.manualImport.illegalIdentifier=Value of {0} has illegal characters. Letters, numbers, dot and minus are allowed
 
-message.notchanged.projectdata = Project Data has not changed
+error.manualImport.projectDataUnchanged = Project Data has not changed
 
-ok.button.text = Ok
-cancel.button.text = Cancel
-
-key.groupId.text= Group Id
-key.artifactId.text= Artifact Id
-key.version.text= Version
+key.manualImport.groupId= Group Id
+key.manualImport.artifactId= Artifact Id
+key.manualImport.version= Version
 
 
 
-link.maven.instructions.selection.text=File: {0}\nPath: {1}\nIn order to tell SoftwareFM about the project that created {0}, please enter the url for the pom that created it. \n\n\
-SoftwareFM will download the jar, check the digest matches your jar, and add the information about the jar to it's repository\n\n\
-You can use this to add any POM (as the project will be added even if it doesn't match the digest of the current item
-
-link.maven.pom.url.text = POM Url
-link.maven.button.text = Use POM
-
+###################### Eclipse Jobs ########################
 #0 url
-job.maven.import =Maven import of [{0}]
+job.mavenImport.title =Maven import of [{0}]
 
 #0 group id, #1 artifact id, #2 version
-job.manual.import =Manual import of {0}:{1}-{2}
+job.manualImport.title =Manual import of {0}:{1}-{2}
+
+
+###################### For testing  ########################
+message.test.forTest = {0}and{1}
+#0 file #1 digest #2 digest 6 characters
+message.test.unknownDigest = File {0} Digest {1} Digest6 {2}
+#0 file #1 digest, #2 digest 6 characters
+#3 projectData
+#4 groupId #5 artifactId #6 version  message.test.projectDetermined = 
+message.test.projectDetermined File {0} Digest {1} Digest6 {2} ProjectData {3} GroupId {4} ArtifactId {5} Version {6}
