Adding buttons to project view

--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -3,6 +3,7 @@
 #type is:
 #   Message: this will appear in a text area, usually communicating something to the user
 #   button: this will appear as the text on a button
+#   action: these are the buttons on the eclipse view.
 #   label: this will appear as the text on a label
 #   key: this is the text for a form
 #   job: this will be the title of an eclipse job
@@ -91,6 +92,41 @@ job.mavenImport.title =Maven import of [{0}]
 
 #0 group id, #1 artifact id, #2 version
 job.manualImport.title =Manual import of {0}:{1}-{2}
+
+
+###################### Button tooltips ########################
+action.actionBar.stackoverflow.tooltip = Stackoverflow
+action.actionBar.stackoverflow.suffix = Stackoverflow
+
+action.actionBar.forum.tooltip = Forums
+action.actionBar.forum.suffix = Forums
+
+action.actionBar.twitter.tooltip = Twitter
+action.actionBar.twitter.suffix = Tweets
+
+action.actionBar.facebook.tooltip = Facebook
+action.actionBar.facebook.suffix = Facebook
+
+action.actionBar.tutorial.tooltip = Tutorials
+action.actionBar.tutorial.suffix = Tutorials
+
+action.actionBar.article.tooltip = Articles
+action.actionBar.article.suffix = Articles
+
+action.actionBar.blog.tooltip = Blog
+action.actionBar.blog.suffix = Blogs
+
+action.actionBar.rss.tooltip = Rss
+action.actionBar.rss.suffix = Rss
+
+action.actionBar.company.tooltip = Companies
+action.actionBar.company.suffix = Companies
+
+action.actionBar.merchandise.tooltip = Merchandise
+action.actionBar.merchandise.suffix = Merchandising
+
+action.actionBar.advert.tooltip = Adverts
+action.actionBar.advert.suffix = Adverts
 
 
 ###################### For testing  ########################
